--- a/ProductPage.html
+++ b/ProductPage.html
@@ -27,7 +27,7 @@ body {
                             
                     </li>
 					<li class="dropdown">
-					     <a href="Home.html" class="shake">Home</a>
+					     <a href="Index.html" class="shake">Home</a>
 						 
 					</li>
                     <li class="dropdown">
