--- a/Home.html
+++ b/Home.html
@@ -107,7 +107,7 @@
 						 </div>
 					</li>
 					<li class="dropdown">
-					     <a href="Home.html" class="shake">Home</a>
+					     <a href="Index.html" class="shake">Home</a>
 						 
 					</li>
                     <li class="dropdown">
