--- a/Account.html
+++ b/Account.html
@@ -115,7 +115,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="index.html" class="shake">Home</a>
+                        <a href="Index.html" class="shake">Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="AboutUs.html" class="shake">About Us</a>
