--- a/ViewCart.html
+++ b/ViewCart.html
@@ -68,7 +68,7 @@
                             
                     </li>
 					<li class="dropdown">
-					     <a href="Index.html" class="shake">Home</a>
+					     <a href="index.html" class="shake">Home</a>
 						 
 					</li>
                     <li class="dropdown">
