--- a/ContactUs.html
+++ b/ContactUs.html
@@ -179,7 +179,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="Index.html" class="shake">Home</a>
+                        <a href="index.html" class="shake">Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="AboutUs.html" class="shake">About Us</a>
