--- a/AboutUs.html
+++ b/AboutUs.html
@@ -116,7 +116,7 @@
 						 </div>
 					</li>
 					<li class="dropdown">
-					     <a href="Home.html" class="shake">Home</a>
+					     <a href="index.html" class="shake">Home</a>
 						 
 					</li>
                     <li class="dropdown">
