--- a/Account.html
+++ b/Account.html
@@ -186,10 +186,10 @@
             <label><input type="radio" name="payment_method" value="crypto"> Cryptocurrency</label>
         </div>
         <h2>Account Information</h2>
-        <p>Username: JohnDoe</p>
-        <p>Email: johndoe@example.com</p>
-        <p>Address: 123 Main Street, City, Country</p>
-        <p>Phone: +1234567890</p>
+        <p>Username: Miken Hawks</p>
+        <p>Email: MikenHawks@gmail.com</p>
+        <p>Address: 1234 Sampaguita Street, Barangay Malaya, Quezon City, Metro Manila, Philippines, 1100</p>
+        <p>Phone: +1934206937</p>
         <button onclick="window.location.href='#'">Sign In</button>
 <button onclick="window.location.href='#'">Register</button>
 <button onclick="window.location.href='#'">Profile</button>
